Added the word tree in kabarak html

--- a/kabarak.html
+++ b/kabarak.html
@@ -24,6 +24,7 @@
     <h2>ACCOMODATION</h2>
     <h3>Men Hostels</h3>
     <h3>Ladies Hostels</h3>
+    <h3>trees</h3>
 
     <h2>STUDENT EXPERIENCE</h2>
     <h3>Games</h3>
